# UKF-MAD-LIO

./: README.md
LIO_rviz/: CMakeLists.txt  README.md  package.xml
LIO_rviz/examples/: CMakeLists.txt  example_UKF_NEWCO.cpp  example_inizialization.cpp
LIO_rviz/ros_nodes/: LIO_rviz.cpp  trajectory_visualizer.cpp
LIO_rviz/src/odometry/: CMakeLists.txt  mad_icp.h
LIO_rviz/src/tools/: CMakeLists.txt
LIO_rviz/src/ukf_manifold/: CMakeLists.txt  nav_state.h  observations.h
UKF-LIO/: CMakeLists.txt
UKF-LIO/examples/: CMakeLists.txt  LIO-UKF-MADICP.cpp
UKF-LIO/src/: CMakeLists.txt
UKF-LIO/src/odometry/: pipeline.cpp
UKF-LIO/src/ukf_manifold/: CMakeLists.txt  lie_algebra.h  nav_state.cpp  ukf.hpp
UKF-MAD-LIO/: CMakeLists.txt
UKF-MAD-LIO/examples/: CMakeLists.txt  LIO_rviz.cpp  example_UKF_NEWCO.cpp  example_complete.cpp  example_evaluation_metrics.cpp  example_inizialization.cpp
UKF-MAD-LIO/src/odometry/: CMakeLists.txt  mad_icp.cpp  pipeline.h
UKF-MAD-LIO/src/tools/: CMakeLists.txt
UKF-MAD-LIO/src/ukf_manifold/: CMakeLists.txt  ukf.h
UKF-MAD-LIO/test_data/: imu_inputs_circular.txt  imu_inputs_circular_bias.txt  imu_inputs_circular_dirt.txt  imu_states_gt_circular.txt  poses_circular.txt
test_data/: synthetic_dataset.txt
